# MarketPlaceNotificationService

./: .gitignore  pyproject.toml
api/v1/: deps.py  urls.py  utils.py
api/v1/notifications/: serializers.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
notifications/: consumers.py  models.py
notifications/migrations/: 0001_initial.py
